syntax = "proto3";

package labels.v1;

import "google/protobuf/timestamp.proto";
import "profile/v1/profile.proto";
import "util/page.proto";
import "util/search.proto";

option go_package = "github.com/bibz-project/gile-back/libs/proto/labels/v1";

message CreateLabelRequest {
  string userId = 1;
  CreateLabelDto dto = 2;
  string workspaceId = 3;
}

message SearchLabelsRequest {
  util.SearchQuery params = 1;
  string workspaceId = 2;
}

message SearchLabelsResponse {
  repeated LabelDto items = 1;
  int32 total = 2 [deprecated = true];
  int32 skip = 3 [deprecated = true];
  int32 take = 4 [deprecated = true];
  bool has_next = 5;
  bool has_prev = 6;
}

message GetLabelByIdRequest {
  int32 id = 1;
  optional string userId = 2;
  string workspaceId = 3;
}

message GetOverviewRequest {
  util.SearchQuery params = 1;
  string userId = 2;
  string workspaceId = 3;
}

message GetOverviewResponse {
  repeated LabelDto items = 1;
  int32 total = 2 [deprecated = true];
  int32 skip = 3 [deprecated = true];
  int32 take = 4 [deprecated = true];
  bool has_next = 5;
  bool has_prev = 6;
}

message UpdateLabelRequest {
  int32 id = 1;
  UpdateLabelDto dto = 2;
  optional string updatedBy = 3;
  string workspaceId = 4;
}

message DeleteLabelRequest {
  int32 id = 1;
  optional string deletedBy = 2;
  string workspaceId = 3;
}

message DeleteLabelResponse {
  bool success = 1;
}

// ============================================================================
// DTOs (aligned with libs/shared/types/src/labels/dtos.ts)
// ============================================================================

message CreateLabelDto {
  string name = 1;
  optional string description = 2;
  optional string color = 3;
  optional string workspace_id = 4;
}

message UpdateLabelDto {
  optional string name = 1;
  optional string description = 2;
  optional string color = 3;
  optional string workspace_id = 4;
}

message LabelDto {
  int32 id = 1;
  string name = 2;
  optional string description = 3;
  optional string color = 4;
  string created_at = 5;
  profile.v1.ProfileOverview created_by_user = 6;
}

// ============================================================================
// SERVICE
// ============================================================================

service LabelService {
  rpc Create(CreateLabelRequest) returns (LabelDto);
  rpc Search(SearchLabelsRequest) returns (SearchLabelsResponse);
  rpc GetById(GetLabelByIdRequest) returns (LabelDto);
  rpc GetOverview(GetOverviewRequest) returns (GetOverviewResponse);
  rpc Update(UpdateLabelRequest) returns (LabelDto);
  rpc Delete(DeleteLabelRequest) returns (DeleteLabelResponse);
}
